--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.schauderhaft</groupId>
-    <artifactId>talk-parent-mvn</artifactId>
+    <artifactId>talk-jdbc-workshop</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Parent project for talks done by Jens Schauder</name>
-    <description>Parent project for talks done by Jens Schauder
+    <name>Material for a Spring Data JDBC Workshop by Jens Schauder</name>
+    <description>Material for a Spring Data JDBC Workshop by Jens Schauder
     </description>
 
     <properties>
