--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 logging.level.org.springframework.jdbc.core=TRACE
+
+# turn all other logging off
+logging.level.org.springframework=OFF
+logging.level.root=OFF
+# don't tell @starbuxman about this
+spring.main.banner-mode=off 
