--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -41,12 +41,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jdbc</artifactId>
-			<version>1.1.0.BUILD-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-relational</artifactId>
-			<version>1.1.0.BUILD-SNAPSHOT</version>
+			<version>1.1.0.RC2</version>
 		</dependency>
 	</dependencies>
 
