--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -43,6 +43,10 @@
 			<artifactId>spring-data-jdbc</artifactId>
 			<version>1.1.0.RC2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
